--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio",
+  "name": "portfolio-website-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
